--- a/src/views/wx/manage.html
+++ b/src/views/wx/manage.html
@@ -123,6 +123,26 @@
       index: 'lib/index' //主入口模块
     }).use(['index', 'console']);
 
+    layui.use(['table', 'layer', 'form'], function () {
+      var table = layui.table;
+      var layer = layui.layer;
+      var form = layui.form;
+
+      table.render({
+        elem: '#wx'
+        , id: 'idTest'
+        , height: 475
+        , data: []
+        , page: true
+        , cols: [[ //表头
+          { checkbox: true, width: "5%" }
+          , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
+          , { field: 'school', title: '绑定机构', width: "30%", minWidth: 200 }
+          , { field: 'wxid', title: '公开ID', width: "30%", minWidth: 200 }
+          , { field: 'token', title: 'Token', width: "30%", minWidth: 200 }
+        ]]
+      });
+    })
 
     let scMap = {};
 
@@ -159,7 +179,7 @@
               , id: 'idTest'
               , height: 475
               , data: tabData
-              , page: true //开启分页
+              , page: true
               , cols: [[ //表头
                 { checkbox: true, width: "5%" }
                 , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
