--- a/src/views/school/manage.html
+++ b/src/views/school/manage.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../layuiadmin/style/admin.css">
     <link rel="stylesheet" href="../../layuiadmin/style/wx.css">
     <link rel="stylesheet" href="../../layuiadmin/style/formBox.css">
+    <link rel="stylesheet" href="../../layuiadmin/style/table.css">
 </head>
 
 <body>
@@ -118,6 +119,7 @@
             <div class="header">学校</div>
             <div class="article">
                 <table id="sc" lay-filter="test"></table>
+                <div id="page-box"></div>
             </div>
         </div>
     </div>
@@ -140,7 +142,7 @@
             table.render({
                 elem: '#sc'
                 , id: 'idTest'
-                , height: 475
+                , height: 450
                 , data: []
                 , page: true
                 , cols: [[ //表头
@@ -175,10 +177,11 @@
             }
 
             api.school.getList(reqData, function (res) {
-                layui.use(['table', 'layer', 'form'], function () {
+                layui.use(['table', 'layer', 'form', 'laypage'], function () {
                     var table = layui.table;
                     var layer = layui.layer;
                     var form = layui.form;
+                    var laypage = layui.laypage;
 
                     if (res.code == '000') {
                         let tabData = [];
@@ -197,9 +200,8 @@
                         table.render({
                             elem: '#sc'
                             , id: 'idTest'
-                            , height: 475
+                            , height: 450
                             , data: tabData
-                            , page: true //开启分页
                             , cols: [[ //表头
                                 { checkbox: true, width: "5%" }
                                 , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
@@ -207,6 +209,23 @@
                                 , { field: 'area', title: '县/区/市', width: "15%" }
                                 , { field: 'address', title: '详细地址', width: "60%" }
                             ]]
+                        });
+
+
+                        laypage.render({
+                            elem: 'page-box'
+                            , limit: 10
+                            , curr: page
+                            , count: res.rows.total
+                            , layout: ['prev', 'page', 'next', 'count', 'skip'] 
+                            , jump: function (obj, first) {
+                                //obj包含了当前分页的所有参数，比如：
+
+                                //首次不执行
+                                if (!first) {
+                                    reloadTable(schoolname, areaid,String(obj.curr));
+                                }
+                            }
                         });
                     } else {
                         layer.msg(res.msg);
